[gd_scene load_steps=6 format=3 uid="uid://bf3d0f2wpes64"]

[ext_resource type="Script" uid="uid://k30qrfteoakp" path="res://scenes/world/weapon.gd" id="1_pqug7"]
[ext_resource type="AudioStream" uid="uid://betw2m30spj7l" path="res://assets/audio/swish.mp3" id="3_uejxr"]
[ext_resource type="AudioStream" uid="uid://b17xuikgm18at" path="res://assets/audio/hit-flesh-01-266311.mp3" id="4_dhuij"]
[ext_resource type="Texture2D" uid="uid://dinbqp45aok51" path="res://assets/weapons-and-equipment.png" id="4_iffqg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vuiw"]
size = Vector2(14.25, 6)

[node name="Weapon" type="Area2D" groups=["attack"]]
texture_filter = 1
collision_layer = 128
collision_mask = 4
script = ExtResource("1_pqug7")
hp = 3

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.875, 0)
shape = SubResource("RectangleShape2D_4vuiw")

[node name="Node2D" type="Node2D" parent="."]

[node name="TimerDeath" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.785398
scale = Vector2(-1, 1)
texture = ExtResource("4_iffqg")
region_enabled = true
region_rect = Rect2(64, 160, 32, 32)

[node name="StartAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_uejxr")
bus = &"SFX"

[node name="HitAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dhuij")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_timer_death_timeout"]
